<resources>
    <string name="app_name">CountingDate</string>
    <string name="title_above">Đang yêu</string>
    <string name="title_bottom">ngày</string>
    <string name="year">năm</string>
    <string name="month">tháng</string>
    <string name="week">tuần</string>
    <string name="date">ngày</string>
    <string name="hour">giờ</string>
    <string name="minute">phút</string>
    <string name="second">giây</string>
    <string name="changeDate">Thay đổi ngày</string>
    <string name="changeTitleAbove">Thay đổi tiêu đề trên</string>
    <string name="changeTitleBottom">Thay đổi tiêu đề dưới</string>
    <string name="changeBackground">Đổi hình nền</string>
    <string name="changIcon">Đổi icon trung tâm</string>
    <string name="title_activity_crop_image">CropImageActivity</string>
    <string name="change_backgroung_user">Đổi ảnh đại diện</string>
    <string name="change_name">Đổi tên hiển thị</string>
    <string name="change_birthday">Đổi ngày sinh nhật</string>
    <string name="change_sex">Đổi giới tính</string>
    <string name="change_color_background_sex">Đổi màu nền giới tính</string>
    <string name="change_mask">Đổi khung ảnh hiển thị</string>
    <string name="name_mask">Khung ảnh đại diện</string>
    <string name="cancel">Hủy</string>
    <string name="accept">Ok</string>
    <string name="s1mple_love">S1mple Love</string>
    <string name="username_1">username 1</string>
    <string name="username_2">username 2</string>
    <string name="choose_color">Chọn màu yêu thích</string>
    <string name="save_memory">Lưu giữ kỷ niệm</string>
    <string name="save">Lưu</string>
    <string name="select_date">chọn ngày</string>
    <string name="content_memory">nội dung</string>

    <string name="rationale_message">We need permission to take photos and choose photos</string>
    <string name="confirm_delete">Bạn chắc chắn muốn xóa không?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="select">Chọn</string>
    <string name="choose_image">Chọn ảnh</string>
    <string-array name="zodicac">
        <item>ma kết</item>
        <item>bảo bình</item>
        <item>song ngư</item>
        <item>bạch dương</item>
        <item>kim ngưu</item>
        <item>song tử</item>
        <item>cự giải</item>
        <item>sư tử</item>
        <item>xử nữ</item>
        <item>thiên bình</item>
        <item>bọ cạp</item>
        <item>nhân mã</item>
    </string-array>

    <string-array name="themeColors">
        <item>#f6e58d</item>
        <item>#ffbe76</item>
        <item>#ff7979</item>
        <item>#badc58</item>
        <item>#dff9fb</item>
        <item>#7ed6df</item>
        <item>#e056fd</item>
        <item>#686de0</item>
        <item>#30336b</item>
        <item>#95afc0</item>
    </string-array>
</resources>