<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/offType"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity2">

    <RelativeLayout
        android:background="@color/in_activity"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="@dimen/padding_2"
        android:paddingEnd="@dimen/padding_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/back"
            android:layout_centerVertical="true"
            android:background="@drawable/left"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <TextView
            android:id="@+id/save"
            android:textColor="@color/color_text_save"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/save_text"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SpUsage" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/add_photo"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:paddingStart="@dimen/padding_2"
        android:editable="false"
        android:id="@+id/date_memory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_date"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_edit_text"
        android:minLines="2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="Deprecated" />
    <EditText
        android:padding="@dimen/padding_2"
        android:id="@+id/content_memory_ac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/content_memory"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_memory"
        tools:ignore="LabelFor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/select_item_list_memory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_memory_ac" />


</androidx.constraintlayout.widget.ConstraintLayout>